--- a/apps/example/Makefile.in
+++ b/apps/example/Makefile.in
@@ -8,6 +8,7 @@ NETMAP=@NETMAP@
 ONVM=@ONVM@
 CCP=@CCP@
 CFLAGS=@CFLAGS@
+LIBS=@LIBS@
 
 # Add arch-specific optimization
 ifeq ($(shell uname -m),x86_64)
@@ -43,9 +44,8 @@ endif
 
 # dpdk-specific variables
 ifeq ($(DPDK),1)
-DPDK_MACHINE_LINKER_FLAGS=$${RTE_SDK}/$${RTE_TARGET}/lib/ldflags.txt
-DPDK_MACHINE_LDFLAGS=$(shell cat ${DPDK_MACHINE_LINKER_FLAGS})
-LIBS += -g -O3 -pthread -lrt -march=native ${MTCP_FLD}/lib/libmtcp.a -lnuma -lmtcp -lpthread -lrt -ldl -lgmp -L${RTE_SDK}/${RTE_TARGET}/lib ${DPDK_MACHINE_LDFLAGS}
+DPDK_MACHINE_LDFLAGS=$(shell pkg-config libdpdk --libs)
+LIBS += -g -O3 -pthread -lrt -march=native ${MTCP_FLD}/lib/libmtcp.a -lnuma -lmtcp -lpthread -lrt -ldl -lgmp ${DPDK_MACHINE_LDFLAGS}
 endif
 
 # onvm-specific variables
