--- a/apps/lighttpd-1.4.32/src/config/mtcp.conf
+++ b/apps/lighttpd-1.4.32/src/config/mtcp.conf
@@ -16,11 +16,11 @@ io = dpdk
 # following line is uncommented.
 #num_cores = 8
 
-# Core mask
-#core_mask = 0000000F0
+# Enable multi-process support
+#multiprocess = 1
 
-# Number of memory channels per processor socket (dpdk-only)
-num_mem_ch = 6
+# Number of memory channels per processor socket (dpdk-only!)
+num_mem_ch = 1
 
 #--- ONVM specific args ---#
 # Service id (required)
@@ -30,25 +30,14 @@ num_mem_ch = 6
 # Destination id (will forward to another NF)
 # If not set will send packets out
 #onvm_dest = 2
-
-# Sample ONVM configurations
-# Single node epserver <-> epwget 
-#onvm_serv = 1
-#onvm_dest = 2
-
-# Simple endpoint server multi node setup
-#onvm_serv = 1
 #--------------------------#
-
-# Enable multi-process support
-#multiprocess = 1
 
 # Used port (please adjust accordingly)
 #------ PSIO ports -------#
 #port = xge0 xge1
 #port = xge1
 #------ DPDK ports -------#
-port = ens7f0np0
+port = enp175s0f0
 #port = dpdk1
 #port = dpdk0 dpdk1
 
@@ -58,25 +47,25 @@ port = ens7f0np0
 # cc = cubic
 
 # Maximum concurrency per core (default = 10000)
-max_concurrency = 10000
+#max_concurrency = 10000
 
 # Maximum number of socket buffers per core (default = 10000)
 # Set this to small value if there are many idle connections
-max_num_buffers = 10000
+#max_num_buffers = 10000
 
 # Receive buffer size of sockets; if not set: rcvbuf = sndbuf
 rcvbuf = 8192
+#rcvbuf = 16384
 
 # Send buffer size of sockets; if not set: sndbuf = rcvbuf
-sndbuf = 8192
-#sndbuf = 3145728
-#sndbuf = 2097152
+sndbuf = 1048576
+#sndbuf = 2048
 
 # if sndbuf & rcvbuf not set: sndbuf = rcvbuf = 8192
 
 # TCP timeout seconds
 # (tcp_timeout = -1 can disable the timeout check)
-tcp_timeout = -1
+tcp_timeout = 30
 
 # TCP timewait seconds
 tcp_timewait = 0
@@ -87,8 +76,7 @@ tcp_timewait = 0
 #stat_print = xge0
 #stat_print = xge1
 #------ DPDK ports -------#
-# stat_print = eth2
-stat_print = ens7f0np0
-#stat_print = dpdk1
+#stat_print = dpdk0
+#stat_print = dpdk0 dpdk1
 
 #######################################################
