--- a/mtcp/src/Makefile.in
+++ b/mtcp/src/Makefile.in
@@ -41,7 +41,7 @@ endif
 # DBGCERR     	= Enable macro to print error statements
 #
 
-GCC_OPT += -Wall -fPIC -fgnu89-inline -Werror
+GCC_OPT += -Wall -fPIC -fgnu89-inline 
 #DBG_OPT = -DDBGMSG -DDBGFUNC -DSTREAM -DSTATE -DTSTAT -DAPP -DEPOLL
 #DBG_OPT = -DDBGMSG -DDBGFUNC -DSTREAM -DSTATE
 #DBG_OPT += -DPKTDUMP
@@ -98,7 +98,6 @@ INC += -I$(PS_DIR)/include
 
 # CFLAGS for DPDK-related compilation
 ifeq ($(DPDK), 1)
-include $(RTE_SDK)/mk/rte.vars.mk
 CFLAGS+=@CFLAGS@
 ifeq ($(ENFORCE_RX_IDLE), 1)
 INC += -DENFORCE_RX_IDLE -DRX_IDLE_THRESH=@RX_IDLE_THRESH@
